added country info dialog

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
                 <div class="spinner"></div>
 
                 <div id="countries-container" class="loading">
-    
+                    <dialog id="show-country-data">
+                        <div class="country-data-container">
+                            <div class="svg-container"><img id="flag" src="" alt=""></div>
+                            <h2 id="countryName"></h2>
+                            <h4 id="countryCapital"></h4>
+                            <h6 id="continent"></h6>
+                            <p id="population"></p>
+                            <p id="area"></p>
+                            <button id="closeBtn">Close</button>
+                        </div>
+                    </dialog>
                 </div>
             </div>
 
