--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
             <div class="wrapper">
                 <h1>World Countries List</h1>
                 <h4 id="total-countries">Total Number of countries: loading...</h4>
-                <p>30 Days Of JavaScript</p>
-                <a href="https://github.com/Asabeneh" target="_blank">Author: Asabeneh Yetayeh</a>
+
+                <p id="search-length-result"></p>
+
+                <div class="search-bar">
+                    <div class="buttons-container">
+                        <button class="selected" id="starting-word">Starting Word</button>
+                        <button id="search-by-any-word">Search By Any Word</button>
+                        <button id="sort-by">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="fill: currentColor;"><path d="M19.707 14.707A1 1 0 0 0 19 13h-7v2h4.586l-4.293 4.293A1 1 0 0 0 13 21h7v-2h-4.586l4.293-4.293zM7 3.99H5v12H2l4 4 4-4H7zM17 3h-2c-.417 0-.79.259-.937.649l-2.75 7.333h2.137L14.193 9h3.613l.743 1.981h2.137l-2.75-7.333A1 1 0 0 0 17 3zm-2.057 4 .75-2h.613l.75 2h-2.113z"></path></svg>
+                        </button>
+                    </div>
+
+                    <div class="input-container">
+                        <input id="search-input" type="text" value="">
+                            <button class="search-icon-container">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="fill: currentColor"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path></svg>
+                            </button>
+                    </div>
+                </div>
 
                 <div class="spinner"></div>
 
